# random-beacon

./: .gitignore  CMakeLists.txt  README.md  ips.txt  ips1.txt  ips2.txt  temp.cpp
include/: DrgBase.hpp  DrgCore.hpp  ReplicaConfig.hpp  client.hpp  drgerror.hpp  erasure.h  merklecpp.h
include/pvss/: Aggregation.hpp  Beacon.hpp  Config.hpp  DecompProof.hpp  Decryption.hpp  Dleq.hpp  Factory.hpp  PVSS_Sharing.hpp  PolyOps.hpp  Serialization.hpp  Utils.hpp  pvss.hpp
scripts/: gen_conf.py  read.py  read_log.py  run_demo.sh
src/: DrgBase.cpp  DrgCore.cpp  client.cpp  drg.cpp  erasure.cpp  pvss_setup.cpp  set_up.cpp
